--- a/index.html
+++ b/index.html
@@ -92,17 +92,54 @@
 
             <aside id="car">
                 <div id="tiside">FACTURA DE VENTA</div>
+                <section id="factura">
+                    <div class="itemfactura"> 
+                        <small>
+                                Moneda
+                        </small>
+                        <select name="COP" id="" value="COP" class="input">
+                            <option value="0">
+                               COP
+                            </option>
+                        </select>
+                        
+                    </div>
+                    <div class="itemfactura">
+                        <small>
+                            lista de precios
+                    </small>
+
+                   <select name="GENERAL" id="" class="input">
+                       <option value="">
+                            GENERAL
+                       </option>
+                   </select>
+                         </div>
+                    <div class="itemfactura">
+                        <small>
+                            Datos cliente
+                    </small>
+                    <input type="text" name="" id="" value="Documento" class="input">
+                         </div>
+                    <div class="itemfactura"> 
+                        <small>
+                               Nombre    
+                        </small>
+                    <input type="text" name="" id="" value="Nombre" class="input">
+                    </div>
+                </section>
                 <section id="carticles">
                     <article class="carticle">
                          </article>
                 </section>
+               
                 <footer>
                     <div id="sale">
                         <span id="buttonsale">
                             sale
 
                         </span>
-                        <span> price</span>
+                        <span id="price"> price</span>
                     </div>
 
 
